# desafio-solfacil

./: .coveragerc  .dockerignore  .env  .env-example  .env.dev.example  .env.example  .env.exemplo  .env.test  .gitignore  .pre-commit-config.yaml  Api_Documentation.md  CHANGELOG.md  Desafio.postman_collection.json  DockerFile  Dockerfile  Dockerfile.app  Dockerfile.dev  Dockerfile.html_app  Dockerfile.local  Getting-Started.md  README-TO-RUN.md  README.md  Taskfile.yml  address_cache.json  alembic.ini  config.cfg  config.py  controller_test.py  coverage.sh  database_test.py  db.sqlite3  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  dockerfile  documentacao.txt  entrypoint.dev.sh  (+23 more)
.github/workflows/: main.yml
alembic/: env.py
api/: models.py  repository.py  serializers.py  tests.py  urls.py  utils.py  validators.py  views.py
api/interfaces/: address_interface.py
api/migrations/: 0001_initial.py  0002_endereco.py
app/: __init__.py  admin.py  api.py  cep.py  database.py  email.py  logger.py  main.py  models.py  serializers.py  settings.py  test_main.py  tests.py  urls.py  utils.py  views.py
app/config/: __init__.py  settings.py
assets/: data2.csv  example1.csv  exemplo.csv  invalid_parceiros.csv  tests.csv  valid_parceiros.csv
database/: Dockerfile
desafioSolfacil/: Dockerfile  docker-compose.yml  manage.py  requirements.txt
desafio_solfacil/: asgi.py  settings.py  urls.py  wsgi.py
docs/: API_DOCUMENTATION.md  autenticacao.md  config-pgadmin4.md  doc-endpoints.md  generate_documentation.py  index.html  instalacao.md  openapi.json  redoc.html  swagger.html
frontend/: app.py
html_app/: README.md  nginx.conf  package-lock.json  package.json
infra/: main.tf  variables.tf
schemas/: schemas.sql
services/: viacep_api.py
solfacil_test/: asgi.py  settings.py  urls.py  wsgi.py
src/: dockerfile  main.py  requirements.txt  routes_v1.py
src/app/: .env  (+5 more)
tests/: __init__.py  cep.py  conftest.py  database.py  helpers.py  utils.py
(+194 files in other folders)
