[tool.poetry]
name = "solfacil-challenge-ph"
version = "0.1.0"
description = "This is the solution to the solfacil challenge"
authors = ["PHRaulino <phraulino@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "solfacil_challenge_ph"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.1"}
gunicorn = "^20.1.0"
sqlalchemy = "^2.0.9"
psycopg2-binary = "^2.9.6"
alembic = "^1.10.3"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
commitizen = "^2.42.1"
isort = "^5.12.0"
flake8 = "^6.0.0"
black = "^23.3.0"
pre-commit = "^3.2.2"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
